--- a/favorite.html
+++ b/favorite.html
@@ -56,21 +56,57 @@
 		
 		<div class="center">
     		<div class='cTitle'>
-				<img src='logo.png' width='70%'>
-        			<div class='cFormDalam'>
-						<h1><input type="text" id="timo" placeholder="Search"/></h1>
-					</div>
+				<div class='cFormDalam'>
+					<h1><input type="text" id="timo" placeholder="Search"/></h1>
+				</div>
       		</div>
         </div>
         
-		
+		<div style="width:100%;height:calc(100% - 50px);">
+			<div class="horizontal-menu-fav" style="display:absolute;">
+				<div class="detailFavorite" style="display:inline-block;">
+					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
+					<div class="content">
+						<h5><b>Kebab Kings, Dhar...</b></h5>
+						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
+					</div>
+				</div>	
+			</div>
+			<div class="horizontal-menu-fav" style="display:absolute;">
+				<div class="detailFavorite" style="display:inline-block;">
+					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
+					<div class="content">
+						<h5><b>Kebab Kings, Dhar...</b></h5>
+						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
+					</div>
+				</div>	
+			</div>
+			<div class="horizontal-menu-fav" style="display:absolute;">
+				<div class="detailFavorite" style="display:inline-block;">
+					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
+					<div class="content">
+						<h5><b>Kebab Kings, Dhar...</b></h5>
+						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
+					</div>
+				</div>	
+			</div>
+			<div class="horizontal-menu-fav" style="display:absolute;">
+				<div class="detailFavorite" style="display:inline-block;">
+					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
+					<div class="content">
+						<h5><b>Kebab Kings, Dhar...</b></h5>
+						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
+					</div>
+				</div>	
+			</div>
+		</div>
 
-        <footer>
+       <footer>
 			<div class="" style="float:left;width:20%;">
 				<img src="img/explore.png" alt="" style="width:100%;height:100%;">
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<img src="img/featured.png" alt="" style="width:100%;height:100%;"><br>
+				<img src="img/favorite_active.png" alt="" style="width:100%;height:100%;"><br>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<img src="img/history.png" alt="" style="width:100%;height:100%;"><br>
