update href fav + next
ganti warna ijo + hrefnya

--- a/favorite.html
+++ b/favorite.html
@@ -42,14 +42,14 @@
     </ons-splitter>
     <template id="home.html">
     <ons-page id="page1">
-        <ons-toolbar>
+        <ons-toolbar style="background-color:white;">
         <div class="left">
             <ons-toolbar-button onclick="fn.open()">
-                <ons-icon icon="md-menu"></ons-icon>
+                <ons-icon icon="md-menu" style="color:black;"></ons-icon>
             </ons-toolbar-button>
         </div>
 
-        <div class="center">
+        <div class="center" style="color:black;">
           Go & Rent
         </div>
         </ons-toolbar>
@@ -103,10 +103,10 @@
 
        <footer>
 			<div class="" style="float:left;width:20%;">
-				<img src="img/explore.png" alt="" style="width:100%;height:100%;">
+        <a href="next.html"><img src="img/explore.png" alt="" style="width:100%;height:100%;"></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<img src="img/favorite_active.png" alt="" style="width:100%;height:100%;"><br>
+				<a href="next.html"><img src="img/favorite_active.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<img src="img/history.png" alt="" style="width:100%;height:100%;"><br>
