--- a/next.html
+++ b/next.html
@@ -177,10 +177,10 @@
 		</div>
         <footer>
 			<div class="" style="float:left;width:20%;">
-				<img src="img/explore_active.png" alt="" style="width:100%;height:100%;">
+				<a href="next.html"><img src="img/explore_active.png" alt="" style="width:100%;height:100%;"></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<img src="img/favorite.png" alt="" style="width:100%;height:100%;"><br>
+				<a href="favorite.html"><img src="img/favorite.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<img src="img/history.png" alt="" style="width:100%;height:100%;"><br>
