sek bingung mau bikin detail

--- a/detail.html
+++ b/detail.html
@@ -54,62 +54,15 @@
         </div>
         </ons-toolbar>
 		
-		<div class="center">
-    		<div class='cTitle'>
-				<div class='cFormDalam'>
-					<h1><input type="text" id="timo" placeholder="Search"/></h1>
-				</div>
-      		</div>
-        </div>
-        
-		<div style="width:100%;height:calc(100% - 50px);">
-			<div class="horizontal-menu-fav" style="display:absolute;">
-				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
-					<div class="content">
-						<h5><b>Kebab Kings, Dhar...</b></h5>
-						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
-					</div>
-				</div>	
-			</div>
-			<div class="horizontal-menu-fav" style="display:absolute;">
-				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
-					<div class="content">
-						<h5><b>Kebab Kings, Dhar...</b></h5>
-						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
-					</div>
-				</div>	
-			</div>
-			<div class="horizontal-menu-fav" style="display:absolute;">
-				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
-					<div class="content">
-						<h5><b>Kebab Kings, Dhar...</b></h5>
-						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
-					</div>
-				</div>	
-			</div>
-			<div class="horizontal-menu-fav" style="display:absolute;">
-				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
-					<div class="content">
-						<h5><b>Kebab Kings, Dhar...</b></h5>
-						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
-					</div>
-				</div>	
-			</div>
-		</div>
-
-       <footer>
+		<footer>
 			<div class="" style="float:left;width:20%;">
         <a href="next.html"><img src="img/explore.png" alt="" style="width:100%;height:100%;"></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<a href="favorite.html"><img src="img/favorite.png" alt="" style="width:100%;height:100%;"><br></a>
+				<a href="#"><img src="img/favorite_active.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<a href="#"><img src="img/history_active.png" alt="" style="width:100%;height:100%;"><br></a>
+				<a href="history.html"><img src="img/history.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<img src="img/inbox.png" alt="" style="width:100%;height:100%;"><br>
