--- a/favorite.html
+++ b/favorite.html
@@ -65,7 +65,7 @@
 		<div style="width:100%;height:calc(100% - 50px);">
 			<div class="horizontal-menu-fav" style="display:absolute;">
 				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
+					<div class="img-feature"><center><img src='img/home.jpg' style="width:100%;height:100%;"></center></div>
 					<div class="content">
 						<h5><b>Kebab Kings, Dhar...</b></h5>
 						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
@@ -74,7 +74,7 @@
 			</div>
 			<div class="horizontal-menu-fav" style="display:absolute;">
 				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
+					<div class="img-feature"><center><img src='img/home.jpg' style="width:100%;height:100%;"></center></div>
 					<div class="content">
 						<h5><b>Kebab Kings, Dhar...</b></h5>
 						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
@@ -83,7 +83,7 @@
 			</div>
 			<div class="horizontal-menu-fav" style="display:absolute;">
 				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
+					<div class="img-feature"><center><img src='img/home.jpg' style="width:100%;height:100%;"></center></div>
 					<div class="content">
 						<h5><b>Kebab Kings, Dhar...</b></h5>
 						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
@@ -92,7 +92,7 @@
 			</div>
 			<div class="horizontal-menu-fav" style="display:absolute;">
 				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
+					<div class="img-feature"><center><img src='img/home.jpg' style="width:100%;height:100%;"></center></div>
 					<div class="content">
 						<h5><b>Kebab Kings, Dhar...</b></h5>
 						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
@@ -106,10 +106,10 @@
         <a href="next.html"><img src="img/explore.png" alt="" style="width:100%;height:100%;"></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<a href="next.html"><img src="img/favorite_active.png" alt="" style="width:100%;height:100%;"><br></a>
+				<a href="#"><img src="img/favorite_active.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<img src="img/history.png" alt="" style="width:100%;height:100%;"><br>
+				<a href="history.html"><img src="img/history.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<img src="img/inbox.png" alt="" style="width:100%;height:100%;"><br>
