--- a/detail.html
+++ b/detail.html
@@ -13,14 +13,38 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery-ui.js"></script>
-    <script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
-    <link rel="stylesheet" href="node_modules/onsenui/css/onsenui.css">
-    <link rel="stylesheet" href="node_modules/onsenui/css/onsen-css-components.min.css">
-
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>		
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery-ui.js"></script>
+		<script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
+		
+		<link rel="stylesheet" href="node_modules/onsenui/css/onsenui.css">
+		<link rel="stylesheet" href="node_modules/onsenui/css/onsen-css-components.min.css">
+		
+		<script>
+			$(function() {
+				$("#banner > div:gt(0)").hide();
+				setInterval(function() {
+				  $('#banner > div:first')
+					.fadeOut(1000)
+					.next()
+					.fadeIn(1000)
+					.end()
+					.appendTo('#banner');
+				},  3000);
+			});
+		</script>
+		
+		<style>
+		  .carousel-inner > .item > img,
+		  .carousel-inner > .item > a > img{
+			  width: 100%;
+			  margin: auto;
+		  }
+	  </style>	
 	</head>
 
 	<body>
@@ -54,22 +78,76 @@
         </div>
         </ons-toolbar>
 		
+		<div class="detailContent">
+				<div id="myCarousel" class="carousel slide" style="width:100%;height:40%" data-ride="carousel">
+				    <!-- Indicators -->
+					<ol class="carousel-indicators">
+						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#myCarousel" data-slide-to="1"></li>
+						<li data-target="#myCarousel" data-slide-to="2"></li>
+					</ol>
+
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner">
+						<div class="item active">
+						  <img src="img/home.jpg" style="width:100%;height:100%">
+						</div>
+
+						<div class="item">
+						  <img src="img/home.jpg"  style="width:100%;height:100%">
+						</div>
+
+						<div class="item">
+							<img src="img/home2.jpg"  style="width:100%;height:100%">
+							</div>
+						</div>
+			
+						<!-- Left and right controls -->
+						<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+							<span class="glyphicon glyphicon-chevron-left"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="right carousel-control" href="#myCarousel" data-slide="next">
+							<span class="glyphicon glyphicon-chevron-right"></span>
+							<span class="sr-only">Next</span>
+						</a>
+					</div>
+			</div>
+			
+		<img class="heartFav" src="img/heart.png" style="width:10%;height:5%;position:absolute;top:10px;right:10px;">
+		<h1 style="margin-left:10px;font-family:AgencyFB">Comfy Family Home</h1>
+		<p style="margin-left:10px;font-size:1em;">Private Home</p>
+		<p style="margin-left:10px;color:gray">Hosted by <a href="#" style="color:#f94d6e">Timo</a></p>
+		<div class="profileHost" style="width:20%;height:12%;position:absolute;top:45%;right:30px;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;"></div>
+		<hr>
+		<center><div class="facility" style="width:95%%;height:12%;margin-left:10px;clear:both;margin-top:20px;font-size:0.8em">
+			<div class="fasil" style="width:20%;height:100%;float:left">
+				<img src='img/people.png' style="width:70%;height:70%;"><br>
+				<p>4 Guest</p>
+			</div>
+			<div class="fasil" style="width:23%;height:100%;float:left">
+				<img src='img/room.png' style="width:70%;height:70%;"><br>
+				<p>2 Bedrooms</p>
+			</div>
+			<div class="fasil" style="width:25%;height:100%;float:left">
+				<img src='img/bed.png' style="width:70%;height:70%;"><br>
+				<p>4 Single Beds</p>
+			</div>
+			<div class="fasil" style="width:25%;height:100%;float:left">
+				<img src='img/bath.png' style="width:70%;height:70%;"><br>
+				<p>2 Bathrooms</p>
+			</div>
+		</div></center>
+		<hr>
+		<div class="aboutHome" style="margin-left:10px;font-family:AgencyFB;height:auto;width:95%;margin-bottom:80px;">
+			<h5>About this home</h5>
+			<p class="isiDetail" style="font-size:1em;font-weight:none;">Comfy little home for family holiday. Another facilities are kitchen, air conditioner in every room, refrigerator, and pantry.</p>			
+		</div>
+		
 		<footer>
-			<div class="" style="float:left;width:20%;">
-        <a href="next.html"><img src="img/explore.png" alt="" style="width:100%;height:100%;"></a>
-			</div>
-			<div class="" style="float:left;width:20%;">
-				<a href="#"><img src="img/favorite_active.png" alt="" style="width:100%;height:100%;"><br></a>
-			</div>
-			<div class="" style="float:left;width:20%;">
-				<a href="history.html"><img src="img/history.png" alt="" style="width:100%;height:100%;"><br></a>
-			</div>
-			<div class="" style="float:left;width:20%;">
-				<img src="img/inbox.png" alt="" style="width:100%;height:100%;"><br>
-			</div>
-			<div class="" style="float:left;width:20%;">
-				<img src="img/profile.png" alt="" style="width:100%;height:100%;"><br>
-			</div>
+			<div class="price" style="text-align:left;margin-top:10px;margin-left:10px;font-size:1.5em;font-weight:bold;float:left">Rp. 250.000,00</div><div style="float:left;text-align:left;font-size:1em;margin-top:15px;margin-left:5px;">per night</div>
+			<div class="captReview" style="font-size:1em;margin-left:10px;clear:both;position:absolute;bottom:10px;">Rates 4 of 5</div>
+			<input type="button" name="btnBooking" value="Check Availability" style="height:60%;background-color:#f94d6e;border-radius:10px;font-size:1em;color:white;top:20%;position:relative;">
 		</footer>
   </ons-page>
   </template>
