--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 
 	<body>
-		<div id='iCont'>
+		<div id='iCont' style="position:absolute;height:50%;margin-top:30%;">
 			<div class='cTitle'>
 				<img src='logo.png' width='70%'>
 			</div>
