--- a/profile.html
+++ b/profile.html
@@ -13,14 +13,38 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery-ui.js"></script>
-    <script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
-    <link rel="stylesheet" href="node_modules/onsenui/css/onsenui.css">
-    <link rel="stylesheet" href="node_modules/onsenui/css/onsen-css-components.min.css">
-
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>		
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery-ui.js"></script>
+		<script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
+		
+		<link rel="stylesheet" href="node_modules/onsenui/css/onsenui.css">
+		<link rel="stylesheet" href="node_modules/onsenui/css/onsen-css-components.min.css">
+		
+		<script>
+			$(function() {
+				$("#banner > div:gt(0)").hide();
+				setInterval(function() {
+				  $('#banner > div:first')
+					.fadeOut(1000)
+					.next()
+					.fadeIn(1000)
+					.end()
+					.appendTo('#banner');
+				},  3000);
+			});
+		</script>
+		
+		<style>
+		  .carousel-inner > .item > img,
+		  .carousel-inner > .item > a > img{
+			  width: 100%;
+			  margin: auto;
+		  }
+	  </style>	
 	</head>
 
 	<body>
@@ -54,54 +78,22 @@
         </div>
         </ons-toolbar>
 		
-		<div class="center">
-    		<div class='cTitle'>
-				<div class='cFormDalam'>
-					<h1><input type="text" id="timo" placeholder="Search"/></h1>
-				</div>
-      		</div>
-        </div>
-        
-		<div style="width:100%;height:calc(100% - 50px);">
-			<div class="horizontal-menu-fav" style="display:absolute;">
-				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
-					<div class="content">
-						<h5><b>Kebab Kings, Dhar...</b></h5>
-						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
-					</div>
-				</div>	
-			</div>
-			<div class="horizontal-menu-fav" style="display:absolute;">
-				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
-					<div class="content">
-						<h5><b>Kebab Kings, Dhar...</b></h5>
-						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
-					</div>
-				</div>	
-			</div>
-			<div class="horizontal-menu-fav" style="display:absolute;">
-				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
-					<div class="content">
-						<h5><b>Kebab Kings, Dhar...</b></h5>
-						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
-					</div>
-				</div>	
-			</div>
-			<div class="horizontal-menu-fav" style="display:absolute;">
-				<div class="detailFavorite" style="display:inline-block;">
-					<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
-					<div class="content">
-						<h5><b>Kebab Kings, Dhar...</b></h5>
-						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
-					</div>
-				</div>	
-			</div>
+		<div class="contProfile" style="width:100%;height:40%;background-color:#f94d6e;">
+			<div class="fotoProfile" style="width:100px;height:100px;position:relative;margin:auto;top:20%;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;margin-bottom:60px;"></div>
+			<p align="center" style="margin-left:10px;font-family:AgencyFB;font-size:1.5em;font-weight:bold;position:relative;color:white">Kenji Andrean &nbsp;<img src="img/edit.png" width="15px" height="15px"></p>
+			<p align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;color:white">Member since August 2017</p>
 		</div>
-
-       <footer>
+		<div class="menuProfile" style="width:100%;height:auto;">
+			<hr>
+			<div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">View and Edit Profile</div>
+			<hr>
+			<div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Become a Host</div>
+			<hr>
+			<div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Give us Feedback</div>
+			<hr>
+		</div>
+		
+		<footer>
 			<div class="" style="float:left;width:20%;">
         <a href="next.html"><img src="img/explore.png" alt="" style="width:100%;height:100%;"></a>
 			</div>
@@ -109,13 +101,13 @@
 				<a href="favorite.html"><img src="img/favorite.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<a href="#"><img src="img/history_active.png" alt="" style="width:100%;height:100%;"><br></a>
+				<a href="history.html"><img src="img/history.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<a href="#"><img src="img/inbox.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<a href="profile.html"><img src="img/profile.png" alt="" style="width:100%;height:100%;"><br></a>
+				<a href="#"><img src="img/profile_active.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 		</footer>
   </ons-page>
