--- a/next.html
+++ b/next.html
@@ -67,6 +67,7 @@
 		  <span class="header-slider">For You</span>
 		  <div class='seeMore'>See More ></div>
 			<div class="horizontal-menu" style="display:absolute;">
+        <a href="detail.html">
             <div class="detailRestoranBtn" style="display:inline-block;">
 				<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
 				<div class="content">
@@ -75,6 +76,7 @@
 					<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
 				</div>
             </div>
+            </a>
             <div class="detailRestoranBtn" style="display:inline-block;">
               <div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
               <div class="content">
