--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
 		</div>
 		<div class="menuProfile" style="width:100%;height:auto;">
 			<hr>
-			<div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">View and Edit Profile</div>
+			<a href="edit_profile.html"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">View and Edit Profile</div></a>
 			<hr>
 			<div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Become a Host</div>
 			<hr>
