detail wes tak tambahi review plus location plus href contact host

--- a/profile.html
+++ b/profile.html
@@ -54,9 +54,9 @@
         <ons-page>
           <ons-list id="chatMember">
             <ons-list-header><img src='logo.png' width='70%'>Menu</ons-list-header>
-            <ons-list-item class="mentionBtn" tappable>Home</ons-list-item>
+            <a href="next.html" style="font-style:none"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
             <ons-list-item class="mentionBtn" tappable>About</ons-list-item>
-            <ons-list-item class="mentionBtn" tappable>Profile</ons-list-item>
+            <a href="profile.html" style="font-style:none"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
             <ons-list-item class="mentionBtn" tappable>Support</ons-list-item>
             <ons-list-item style="position:absolute;overflow:hidden;bottom:0;" class="mentionBtn" onclick="onBackKeyDown()" tappable>Logout</ons-list-footer>
           </ons-list>
@@ -85,11 +85,11 @@
 		</div>
 		<div class="menuProfile" style="width:100%;height:auto;">
 			<hr>
-			<a href="edit_profile.html"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">View and Edit Profile</div></a>
+			<a href="edit_profile.html" style="font-style:none"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">View and Edit Profile</div></a>
 			<hr>
-			<div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Become a Host</div>
+			<a href="host.html" style="font-style:none"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Become a Host</div></a>
 			<hr>
-			<div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Give us Feedback</div>
+			<a href="feedback.html" style="font-style:none"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Give us Feedback</div></a>
 			<hr>
 		</div>
 		
