--- a/detail.html
+++ b/detail.html
@@ -54,9 +54,9 @@
         <ons-page>
           <ons-list id="chatMember">
             <ons-list-header><img src='logo.png' width='70%'>Menu</ons-list-header>
-            <ons-list-item class="mentionBtn" tappable><a href="next.html">Home</a></ons-list-item>
+            <a href="next.html" style="font-style:none"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
             <ons-list-item class="mentionBtn" tappable>About</ons-list-item>
-            <ons-list-item class="mentionBtn" tappable><a href="profile.html">Profile</a></ons-list-item>
+            <a href="profile.html" style="font-style:none"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
             <ons-list-item class="mentionBtn" tappable>Support</ons-list-item>
             <ons-list-item style="position:absolute;overflow:hidden;bottom:0;" class="mentionBtn" onclick="onBackKeyDown()" tappable>Logout</ons-list-footer>
           </ons-list>
@@ -78,7 +78,7 @@
         </div>
         </ons-toolbar>
 
-		<div class="detailContent">
+		<div class="detailContent" onmouseup="coba(event)">		
 				<div id="myCarousel" class="carousel slide" style="width:100%;height:40%" data-ride="carousel">
 				    <!-- Indicators -->
 					<ol class="carousel-indicators">
@@ -99,28 +99,32 @@
 
 						<div class="item">
 							<img src="img/home2.jpg"  style="width:100%;height:100%">
-							</div>
 						</div>
-
-						<!-- Left and right controls -->
-						<a class="left carousel-control" href="#myCarousel" data-slide="prev">
-							<span class="glyphicon glyphicon-chevron-left"></span>
-							<span class="sr-only">Previous</span>
-						</a>
-						<a class="right carousel-control" href="#myCarousel" data-slide="next">
-							<span class="glyphicon glyphicon-chevron-right"></span>
-							<span class="sr-only">Next</span>
-						</a>
 					</div>
-			</div>
+
+					<!-- Left and right controls -->
+					<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#myCarousel" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+		</div>
+		
       <button id="buyNowBtn"> Buy Now !</button>
          <button id="buyInFutureBtn"> Pay in Future !</button>
          <button id="profileSharingBtn"> Profile Sharing !</button>
          <button id="cardScanBtn">Advanced: Use card.io scan only</button>
 		<img class="heartFav" src="img/heart.png" style="width:10%;height:5%;position:absolute;top:10px;right:10px;">
 		<h1 style="margin-left:10px;font-family:AgencyFB">Comfy Family Home</h1>
-		<p style="margin-left:10px;font-size:1em;">Private Home</p>
-		<p style="margin-left:10px;color:gray">Hosted by <a href="#" style="color:#f94d6e">Kenji</a></p>
+		<p id="typeHome" style="margin-left:10px;font-size:1em;float:left">Private Home</p>
+		<p style="margin-left:10px;font-size:1em;float:left">. &nbsp;</p>
+		<p id="locHome" style="margin-left:10px;font-size:1em;float:none;">Location</p>
+		<p style="margin-left:10px;color:gray;float:left;">Hosted by </p>
+		<p id="nameHost" style="margin-left:10px;color:gray;float:none;">&nbsp;<a href="#" style="color:#f94d6e">Kenji</a></p>
 		<div class="profileHost" style="width:75px;height:75px;position:absolute;top:45%;right:30px;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;"></div>
 		<hr>
 		<center><div class="facility" style="width:95%%;height:12%;margin-left:10px;clear:both;margin-top:20px;font-size:0.8em">
@@ -142,11 +146,25 @@
 			</div>
 		</div></center>
 		<hr>
-		<div class="aboutHome" style="margin-left:10px;font-family:AgencyFB;height:auto;width:95%;margin-bottom:80px;">
+		<div id="aboutHome" style="margin-left:10px;font-family:AgencyFB;height:auto;width:95%;margin-bottom:20px;">
 			<h5>About this home</h5>
 			<p class="isiDetail" style="font-size:1em;font-weight:none;">Comfy little home for family holiday. Another facilities are kitchen, air conditioner in every room, refrigerator, and pantry.</p>
 		</div>
-
+		<hr>
+		<a href='#' style="font-style:none;color:black;"><h5 style="margin-left:10px;">Contact Host</h5></a>
+		<hr>
+		<h5 style="margin-left:10px;">Reviews</h5>
+		<div id="reviews" style="margin-left:10px;font-family:AgencyFB;height:auto;width:95%;margin-bottom:80px;">			
+			<div class="kiri" style="width:20%;height:auto;float:left;margin-right:20px;margin-left:10px;">
+				<div class="fotoUser" style="width:50px;height:50px;position:relative;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;float:left"></div>
+			</div>
+			<div class="kanan" style="width:auto;height:auto;position:relative;margin-top:20px;margin-left:20px;">
+				<div class="namaUser" style="width:auto;height:auto;position:relative;font-size:1.5em;font-family:AgencyFB;float:none;">Timo Tirtawan</div>
+				<div class="tglReview" style="width:auto;height:auto;position:relative;font-size:1em;font-family:HNLight;float:none;color:lightgray;font-weight:none;">November 2017</div>
+			</div>
+			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both;">WILL do next! If they had at the Caterpillar's making such VERY short remarks, and she walked on in a few minutes she heard her voice close to them, and all the first figure,' said the Mouse. 'Of course,' the Dodo solemnly, rising to its feet, ran round the court and got behind Alice as she came in sight of the e--e--evening, Beautiful, beautiful Soup!' CHAPTER XI. Who Stole the Tarts? The King and Queen of Hearts, she made it out to her daughter 'Ah, my dear! Let this be a book written about.</div>
+			<hr>
+		</div>
 		<footer>
 			<div class="price" style="text-align:left;margin-top:10px;margin-left:10px;font-size:1.5em;font-weight:bold;float:left">Rp. 10.250.000,00</div><div style="float:left;text-align:left;font-size:1em;margin-top:15px;margin-left:5px;">per night</div>
 			<div class="captReview" style="font-size:1em;margin-left:10px;clear:both;position:absolute;bottom:10px;">Rates 4 of 5</div>
@@ -156,8 +174,14 @@
 		</footer>
   </ons-page>
   </template>
-	</body>
-  <script type="text/javascript">
+</body>
+	
+  <script type="text/javascript">  	
+	function coba(event){
+		var x = event.clientX;
+		document.getElementById("aboutHome").innerHTML = x;
+	}
+	
   var app = {
       // Application Constructor
       initialize: function() {
